<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.tausoft.kidsgarden.viewModels.AddEditKidViewModel" />
        <variable
            name="absences"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/base_margin"
        tools:context=".ui.AddEditKidFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/kid_name"
                android:text="@{viewModel.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textSize="@dimen/text_size"
                android:inputType="text"
                android:minHeight="@dimen/min_height" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_absence"
            android:text="@{viewModel.absences}"
            app:hideIfZero="@{viewModel.id}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_low"
            android:layout_marginBottom="@dimen/base_margin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_absence"
            android:text="@string/add_absence"
            app:hideIfZero="@{viewModel.id}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/half_margin"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/OK_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/half_margin"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>
</layout>