<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tausoft.kidsgarden.viewModels.WorkCalendarViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WorkCalendarFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/huge_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/base_margin"
                android:paddingEnd="@dimen/base_margin"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dec_year"
                    android:onClick="@{() -> (viewModel.decYear())}"
                    android:contentDescription="@string/dec_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_left"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/current_year"
                    android:text="@{String.valueOf(viewModel.year)}"
                    android:clickable="false"
                    android:contentDescription="@string/current_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/half_margin"
                    android:layout_marginEnd="@dimen/half_margin" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/inc_year"
                    android:onClick="@{() -> (viewModel.incYear())}"
                    android:contentDescription="@string/inc_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_right"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_work_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/base_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_work_calendar"
            android:onClick="@{() -> (viewModel.listOfDays())}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/fab_add"
            app:srcCompat="@drawable/ic_calendar"
            android:backgroundTint="@color/purple_500"
            app:tint="@color/white"/>

    </FrameLayout>
</layout>